try fix for vercel

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>kaela Fanmade Website</title>
-    <link rel="stylesheet" href="./docs/css/style.css" />
+    <link rel="stylesheet" href="./public/css/style.css" />
   </head>
   <body style="background-color: #181818">
     <!-- navbar -->
@@ -90,7 +90,7 @@
       <section
         id="hero"
         style="
-          background-image: url(./docs/img/kaelaHmmCopy.jpg);
+          background-image: url(./public/img/kaelaHmmCopy.jpg);
           background-position: 100% 40%;
         "
         class="relative w-full h-screen bg-no-repeat flex justify-center"
@@ -127,7 +127,7 @@
                   id="figure-select1"
                   type="button"
                   class="w-[80px] h-[80px] bg-cover rounded-full border-solid border-2 border-[#E0CA31]"
-                  style="background-image: url(./docs/img/selecfix.png)"
+                  style="background-image: url(./public/img/selecfix.png)"
                 ></button>
               </li>
               <li>
@@ -135,7 +135,7 @@
                   id="figure-select2"
                   type="button"
                   class="w-[80px] h-[80px] bg-cover rounded-full border-solid border-2 border-[#E0CA31]"
-                  style="background-image: url(./docs/img/selectfigure2.png)"
+                  style="background-image: url(./public/img/selectfigure2.png)"
                 ></button>
               </li>
               <li>
@@ -143,7 +143,7 @@
                   id="figure-select3"
                   type="button"
                   class="w-[80px] h-[80px] bg-cover rounded-full border-solid border-2 border-[#E0CA31]"
-                  style="background-image: url(./docs/img/selectfigure3.png)"
+                  style="background-image: url(./public/img/selectfigure3.png)"
                 ></button>
               </li>
             </ul>
